# payment_system

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cargo-test.yml  docker-compose-build.yml
.sqlx/: query-14ffe624cc97a75e8430dd16c28ce51eb92d850a7b3a4cf4a64ee198407c6f3b.json  query-298b82fd330efaeaa490bdf2f476e72c55fbabe8648e9bd1c3098685dbf3f53e.json  query-3be5bc8495fbd59c0b1ae050a07c73218ca4c2096e2d5bc6dc151c78db7a7618.json  query-66b5aaef8f6b0444cd7228b15b4820a9a58c4e52ebc55f37362698e6df107905.json  query-a75792bdd43860a078b91d4d79ccbeb1e35daddca63bf93f9ec798464cc14fdf.json  query-a76eafff438558f177c6e33e19e2feeb5d8af38fcbdda6dc983ddbbdd9c2044e.json  query-b411110eff25502a68e6894fc0260ae6054306872fb6a4dcce509778a68b11f4.json  query-e47922b4c1a8655988b5e732758e0518ddb141ed09643e9f89670a51a8560365.json  query-ffd9022b9e7f831c6a9aec69e7cd0be5f2b7f3eefc62e02c1374f5d2ec7b8853.json
docs/: openapi.yaml  postman-collection-payment_system.json  thunder-client-collection_payment_system.json
migrations/: 20231222000000_initial_schema.down.sql  20231222000000_initial_schema.up.sql
src/: lib.rs  main.rs
src/routes/: balance.rs  health.rs  merchant.rs  mod.rs  transactions.rs  user.rs
src/utils/: auth.rs  mod.rs  response.rs  token.rs
tests/: integration_test.rs  unit_test.rs
