[package]
name = "payment-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "rust_decimal",
] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenv = "0.15"
rust_decimal = "1.32"
time = "0.3"
jsonwebtoken = "9.2"
bcrypt = "0.16.0"
chrono = "0.4"
