[package]
name = "payment_system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3.1", features = ["macros"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "rust_decimal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenv = "0.15"
rust_decimal = "1.32"
time = { version = "0.3", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.6"
actix-governor = "0.8.0"
actix-web-httpauth = "0.8"
actix-rt = "2.10.0"
email_address = "0.2.9"
awc = "3.5.1"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }


[dev-dependencies]
testcontainers = { version = "0.10" }
